force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/External_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Email__c</fullName>
    <label>External Email</label>
    <type>Email</type>
</CustomField>