force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/formula_email__c.field-meta.xml
<CustomField>
    <fullName>formula_email__c</fullName>
    <formula>IF(  ISNULL(External_Email__c), IF( ISNULL(Internal_Email__c), &#39;&#39;,Internal_Email__c), External_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>