force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>