force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <formula>Scrum_Team__r.Team_Email_Group_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group ID</label>
    <type>Text</type>
</CustomField>