force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Email__c</fullName>
    <formula>Member_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Email</label>
    <type>Text</type>
</CustomField>