force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Member_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Member_Name_Formula__c</fullName>
    <formula>IF ( OR ( $RecordType.Name = &#39;Internal&#39;, $RecordType.Name = &#39;&#39; ), Member_Name__r.FirstName &amp; &#39; &#39; &amp; Member_Name__r.LastName,
IF ( $RecordType.Name = &#39;External&#39;, &#39;(External) &#39; , &#39;(Planned)&#39; ) &amp; Member_Name_Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>