force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Member_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Member_Name_Text__c</fullName>
    <label>Member Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>