force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Record_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Copy__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Record Type Copy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>