force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Req_Code__c.field-meta.xml
<CustomField>
    <fullName>Req_Code__c</fullName>
    <label>Req. Code</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>