force-app/main/default/objects/ADM_Scrum_Team_Member__c/fields/Scrum_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team_Name__c</fullName>
    <formula>Scrum_Team__r.Name</formula>
    <label>Team Name</label>
    <type>Text</type>
</CustomField>