force-app/main/default/objects/ADM_Scrum_Team_Member__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>Employee from outside SFDC</description>
    <label>External</label>
</RecordType>