force-app/main/default/objects/ADM_Scrum_Team_Member__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>SFDC Employee</description>
    <label>Internal</label>
</RecordType>