force-app/main/default/objects/ADM_Scrum_Team_Member__c/recordTypes/Planned.recordType-meta.xml
<RecordType>
    <fullName>Planned</fullName>
    <active>true</active>
    <description>Planned head count</description>
    <label>Planned</label>
</RecordType>