force-app/main/default/objects/ADM_Scrum_Team_Member__c/validationRules/Allocate_over_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocate_over_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Allocation__c &gt; 1.00</errorConditionFormula>
    <errorDisplayField>Allocation__c</errorDisplayField>
    <errorMessage>Allocation percent should not exceed 100%</errorMessage>
</ValidationRule>