force-app/main/default/objects/ADM_Scrum_Team_Member__c/validationRules/Allocation_above_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_above_0</fullName>
    <active>true</active>
    <description>Allocation should not be below zero</description>
    <errorConditionFormula>Allocation__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Allocation__c</errorDisplayField>
    <errorMessage>Allocation should not be a negative number</errorMessage>
</ValidationRule>