force-app/main/default/objects/ADM_Scrum_Team_Member__c/validationRules/Allocation_cant_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_cant_exceed_100</fullName>
    <active>true</active>
    <description>Allocation should not exceed 100%</description>
    <errorConditionFormula>Allocation__c  &gt; 100</errorConditionFormula>
    <errorDisplayField>Allocation__c</errorDisplayField>
    <errorMessage>Allocation should not exceed 100%</errorMessage>
</ValidationRule>