force-app/main/default/objects/ADM_Scrum_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Member_Name__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Record_Type_Copy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>